--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
     <section id="home" class="landing-section">
         <div class="profile-container" data-aos="fade-up">
             <div class="profile-container-outer">
-                <img src="profile.jpg" alt="Madhuri" class="profile-image" onclick="openModal()">
+                <img src="IMG_20250805_215433_897.jpg" alt="Madhuri" class="profile-image" onclick="openModal()">
             </div>
             <div class="typewriter-container">
                 <h1 class="typewriter">I am a <span id="typewriter-text"></span></h1>
