--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; Copyright received. Made with 🤝 by Friend</p>
+            <p>&copy; Copyright received. Made with 🤝 by 🤝</p>
         </div>
     </footer>
     
@@ -704,7 +704,7 @@
         
         // Typewriter Effect
         const typewriterTexts = [
-            'Tech Enthusiast',
+           'Madhuri', 'Tech Enthusiast',
             'CSE Girl',
             'Photographer',
             'Musician'
