--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     
     body {
-        background: linear-gradient(135deg, #f5f0dc 0%, #e8dcc0 100%);
+        background-image:url('bg.png');
         font-family: 'Crimson Text', serif;
         min-height: 100vh;
         overflow-x: hidden;
@@ -293,7 +293,7 @@
     
     /* Cover page special styling */
     .cover-page {
-        background-color:lightblue;
+        background-color:lightpink;
         color: white;
         display: flex;
         flex-direction: column;
