--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     
     body {
-        background-image:url('113.png');
+        background-image:url('images (1).jpeg');
         font-family: 'Crimson Text', serif;
         min-height: 100vh;
         overflow-x: hidden;
@@ -655,7 +655,7 @@
         </div>
     </div>
 </div>
-
+<footer>@ All copyrights received | Made by 🤝 with 🤝</footer>
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src = "script.js"></script>
